2009-03-03 Raphael Neider <rneider AT web.de>

	* device/lib/pic/libdev/Makefile.in: build device-specific
	  libraries for the correct processor, fixes #2654585

2009-03-01 Raphael Neider <rneider AT web.de>

	* device/lib/Makefile.in: fixed parallel builds (i.e., make -jN, N>1)

2009-03-01 Borut Razem <borut.razem AT siol.net>

	* src/z80/peep.c: fixed bug #2648964: --i-code-in-asm crashes sdcc
	* .version, sdcc.spec, doc/sdccman.lyx, doc/INSTALL.txt:
	  changed sdcc version to 2.9.0

2009-03-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/ralloc.c (spillThis, spilSomething): fixed bug 2435941
	  (serialRegAssign): do not spil bit registers
	  throughout cosmetic changes
	* support/regression/tests/bug2435941.c: new, added

2009-02-28 Raphael Neider <rneider AT web.de>

	* src/regression/compare10.c,
	  src/regression/compare7.c,
	  src/regression/compare8.c,
	  src/regression/compare9.c: reset watchdog timer in time
	* src/regression/configword.c: apply patch from #2488150
	* src/pic/glue.c (pic14createInterruptVect): pin RESET vector
	  handler to 0x0000 as the linker no longer knows STARTUP sections
	* src/pic/pcode.c (register_reassign, ReuseReg): applied modified
	  patch #2512926 to (mostly) fix #1762626, cosmetic changes
	* src/pic/pcodepeep.c: remove reference to nonexisting function

2009-02-28 Raphael Neider <rneider AT web.de>

	* device/include/pic16/signal.h: avoid multiline inline
	  assembler statements in macros, addresses #2644965

2009-02-27 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic18f[24][3456]k20.h,
	  device/include/pic16/pic18f[68][567]j50.h,
	  device/include/pic16/pic18f[68]6j55.h,
	  device/lib/pic16/libdev/pic18f[24][3456]k20.c,
	  device/lib/pic16/libdev/pic18f[68][567]j50.c,
	  device/lib/pic16/libdev/pic18f[68]6j55.c,
	  device/include/pic16/pic18fregs.h,
	  device/include/pic16/pic16devices.txt,
	  device/lib/pic16/pics.all,
	  device/lib/pic16/libdev/Makefile.am,